--- a/HTML/sp.html
+++ b/HTML/sp.html
@@ -71,7 +71,7 @@
             <form action="#">
                 <div class="input-box w-100">
                     <span class="icon position-absolute text-dark"><ion-icon name="mail"></ion-icon></span>
-                    <input type="email" class="w-100 bg-transparent fw-bolder text-dark border-0" type="email" required>
+                    <input type="email" class="w-100 bg-transparent fw-bolder text-dark border-0" required>
                     <label class="fw-bolder text-dark">Email</label>
                 </div>
                 <div class="input-box">
